# openclaw-lab

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  STRUCTURE.md
.github/: WORKFLOWS.md  actionlint.yaml  copilot-instructions.md
.github/workflows/: build-push-image.yaml  ci.yaml  infra-destroy.yaml  infra-preview.yaml  infra-up.yaml
ec2-spot/: ARCHITECTURE.md  DASHBOARD.md  Pulumi.dev.mumbai.yaml  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  dashboard_builder.py  network_helpers.py  pyproject.toml  template_helpers.py  user_data.py
ec2-spot/templates/: auto-approve-devices.sh  cloud-config.yaml.j2  cloudwatch-agent-config.json  docker-compose.yaml  docker-service.conf  dotenv.example  openclaw-s3-backup.sh  openclaw-s3-restore.sh  openclaw-service.conf  s3_snapshot_lifecycle.py
ec2-spot/tests/: test_network_helpers.py  test_s3_lifecycle.py  test_template_helpers.py  test_user_data.py
platform/: .gitignore  Pulumi.dev.mumbai.yaml  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
scripts/: ec2-spot-prices.sh
