[project]
name = "openclaw-platform"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-aws>=7.0.0,<8.0.0",
    "mypy>=1.0.0,<2.0.0",
    "ruff>=0.15.2",
]

[tool.mypy]
python_version = "3.14"
strict = true
exclude_gitignore = true
exclude = [
    'venv', 
    '__pycache__', 
    '\.pytest_cache', 
    '\.mypy_cache', 
    '\.ruff_cache', 
    '\.venv'
]
files = ["*.py", "tests/*.py"]